--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -69,7 +69,8 @@
         </div>
         <div class="btn-container">
           <button>login</button>
-          <button><img src="../../resources/images/google logo.jpeg" alt="" width="15">login with google</button>
+          <button><img src="../../resources/images/google logo.jpeg" alt="" width="15"
+              style="margin-right: 10px ;">login with google</button>
         </div>
         <p>Don't have an account? <a href="../../pages/signup/signup.html">Sign up here</a></p>
         <img src="../../resources/images/Frame 22.png" class="float" alt="">
