--- a/pages/forgot-password/forgot-password.html
+++ b/pages/forgot-password/forgot-password.html
@@ -64,7 +64,7 @@
         <div class="btn-container">
           <button>reset password</button>
         </div>
-        <p class="exit"><a href="../../pages/login/login.html">x</a></p>
+        <p class="exit"><a href="../../pages/login/login.html"><i class="fa-solid fa-xmark"></i></a></p>
         <img src="../../resources/images/Frame 22.png" class="float" alt="">
       </form>
     </section>
